@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.4 2018/07/28 14:40:52 brook Exp $
+# $NetBSD: Makefile,v 1.5 2019/07/31 20:48:51 brook Exp $
 
-CATEGORIES=	textproc
+CATEGORIES=	textproc R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/formatR/
 COMMENT=	Format R code automatically
-# TODO: LICENSE=	GPL
+LICENSE=	gnu-gpl-v1 OR gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	formatR
-R_PKGVER=	1.4
+R_PKGVER=	1.7
+
+USE_LANGUAGES=	# none
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
