@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3207 2019/07/31 20:47:23 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3208 2019/07/31 20:48:51 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5164,3 +5164,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated net/R-pbdZMQ to 0.3.3 [brook 2019-07-31]
 	Updated print/R-knitr to 1.23 [brook 2019-07-31]
 	Updated security/R-digest to 0.6.20 [brook 2019-07-31]
+	Updated textproc/R-formatR to 1.7 [brook 2019-07-31]
